--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,4 +38,11 @@ body {
     text-decoration: none;
     font-weight: bold;
   }
+  .main-image {
+    width: 100%;
+    height: 50vh;         /* 画面の高さの50% */
+    object-fit: cover;    /* はみ出す部分は切り取ってフィット */
+    display: block;
+  }
+  
   
